--- a/templates/empleados/edit.html
+++ b/templates/empleados/edit.html
@@ -1,24 +1,37 @@
-{% for empleado in empleados %}
+{% include 'header.html' %}
 
-<form method="post" action="/update" enctype="multipart/form-data">
-    ID:
-    <input type="text" value="{{ empleado[0] }}" name="txtID" id="txtID">
-    <br>
-    Nombre:
-    <input type="text" value="{{ empleado[1] }}" name="txtNombre" id="txtNombre">
-    <br>
-    Correo:
-    <input type="text" value="{{ empleado[2] }}" name="txtCorreo" id="txtCorreo">
-    <br>
-    Foto: {{ empleado[0] }}
-    <input type="file" name="txtFoto" id="txtFoto">
-    <br>
-    <br>
-    <input type="submit" value="Editar"> 
-</form>
+{% for empleado in empleados  %}
+    <form method="post" action="/update" enctype="multipart/form-data">   
+        
+        <div class="card">
+            <div class="card-header">
+                Editar empleado
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Datos del empleado</h5>
+                <p class="card-text">
 
-    {{ empleado[0] }}
-    {{ empleado[1] }}
-    {{ empleado[2] }}
-    {{ empleado[3] }}
+                <div class="form-group">
+                    <label for="txtNombre">Nombre:</label>
+                    <input id="txtNombre" value="{{ empleado[1] }}" class="form-control" type="text" name="txtNombre">
+                </div>
+                <input type="hidden" value="{{ empleado[0] }}" name="txtID" id="txtID">
+                <div class="form-group">
+                    <label for="txtCorreo">Correo:</label>
+                    <input id="txtCorreo" value="{{ empleado[2] }}" class="form-control" type="text" name="txtCorreo">
+                </div>
+                <div class="form-group">
+                    <label for="txtFoto">Foto:</label>
+                    <img class="img-thumbnail" width="100" src="{{ url_for('uploads', nombreFoto=empleado[3]) }}" alt="">
+                    <input id="txtFoto" value="{{ empleado[2] }}" class="form-control" type="file" name="txtFoto">
+                </div>
+                 <div class="form-group">
+                    <input type="submit" class="btn btn-success" value="Modificar">
+                    <a href="{{url_for('index')}}" class="btn btn-primary">Regresar</a>
+                </div>
+            </div>
+        </div>  
+    </form>
 {% endfor %}
+
+{% include 'footer.html' %}
